# maplab_features

./: .gitmodules  CMakeLists.txt  README.md  image_receiver.py  lidar_image_interface.py  package.xml  point_cloud_utils.py  r2d2_interface.py  r2d2_processor.py  ros_interface.py  setup.py
config/: euroc-lk-sift.yaml  freak_config.yaml  lidar_image.yaml  lidar_image_config.yaml  lidar_projection_config.yaml  lk_sift.yaml  lk_surf.yaml  lk_tracker.config  lk_tracker_config.yaml  super-hilti.yaml  super.yaml  super_lidar.yaml  superpoint_pca.pkl
config/calibrations/: hilti-lidar.csv
deploy/: Dockerfile.interface  Dockerfile.worker  build_docker.sh  compile.sh  copy_to_ctx.sh  docker-compose.yml  dockerfile  install_base.sh  install_catkin.sh  install_packages.sh  install_ros.sh  set_env.sh
launch/: calibrate_lidar.launch  euroc-lk-sift.launch  lidar_image.launch  lidar_projection.launch  lk_sift.launch  lk_surf.launch  lk_tracker.launch  super-hilti-2021.launch  super-hilti-2023.launch  super.launch  super_docker.launch  super_lidar.launch
share/: run_interface  run_pipeline_superglue_superpoint  run_superglue  run_superpoint  superpoint_pca_hilti2023.txt
src/: calibrate_lidar.py  config.py  feature_detector.py  feature_extraction.py  feature_tracking.py  lidar_image_interface.py  point_cloud_utils.py  r2d2_interface.py  ros_interface.py  superglue_interface.py  superpoint_interface.py  superpoint_pca.py  utils_py2.py  utils_py3.py
