<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>maplab_features</name>
  <version>2.2.0</version>
  <description>External features.</description>
  <maintainer email="maplab-dev@mavt.ethz.ch">maplab-developers</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>maplab_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
</package>
